Login Logic Implemented in Front end & Few Login json data chnages done in Backend

--- a/Frontend/my-photo-links/src/app/app.component.html
+++ b/Frontend/my-photo-links/src/app/app.component.html
@@ -1,2 +1,11 @@
-<p>App Component Works</p>
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav #sideNav role="navigation">
+    <app-side-nav (closeSideNav)="sideNav.close()"></app-side-nav>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-header (sideNavToggle)="sideNav.toggle()"></app-header>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
