--- a/Frontend/my-photo-links/src/app/navigation/side-nav/side-nav.component.html
+++ b/Frontend/my-photo-links/src/app/navigation/side-nav/side-nav.component.html
@@ -1,1 +1,20 @@
-<p>side-nav works!</p>
+<mat-nav-list>
+  <a mat-list-item routerLink="/signup" (click)="OnClose()" *ngIf="!isAuthenticated">
+    <mat-icon>face</mat-icon>
+    <span class="nav-caption">Signup</span>
+  </a>
+  <a mat-list-item routerLink="/login" (click)="OnClose()" *ngIf="!isAuthenticated">
+    <mat-icon>input</mat-icon>
+    <span class="nav-caption">Login</span>
+  </a>
+  <a mat-list-item routerLink="/photoLinks" (click)="OnClose()" *ngIf="isAuthenticated">
+    <mat-icon>perm_media</mat-icon>
+    <span class="nav-caption">Photo Links</span>
+  </a>
+  <mat-list-item *ngIf="isAuthenticated">
+    <button mat-icon-button (click)="OnLogout()">
+      <mat-icon>eject</mat-icon>
+      <span class="nav-caption">Logout</span>
+    </button>
+  </mat-list-item>
+</mat-nav-list>
