--- a/Frontend/my-photo-links/src/app/auth/login/login.component.html
+++ b/Frontend/my-photo-links/src/app/auth/login/login.component.html
@@ -1,24 +1,38 @@
 <section>
-  <br>
-  <form fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center" [formGroup]="loginForm" (ngSubmit)="OnSubmit()">
+<br>
+<mat-card fxLayout="column" fxLayoutAlign="center center">
 
-    <mat-form-field appearance="outline">
-      <mat-label>Username</mat-label>
-      <input type="text" matInput placeholder="Your username" formControlName="username">
-      <mat-hint>Please enter your username</mat-hint>
-      <mat-error>Missing username</mat-error>
-    </mat-form-field>
+  <mat-card-header>
+    <mat-card-title>Log In</mat-card-title>
+  </mat-card-header>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Password</mat-label>
-      <input type="password" matInput placeholder="Your password" formControlName="password">
-      <mat-hint>Please enter your password</mat-hint>
-      <mat-error>Missing password</mat-error>
-    </mat-form-field>
+  <mat-card-content>
 
-    <button *ngIf="!isLoading" type="submit" mat-raised-button color="primary" [disabled]="loginForm.invalid">Submit</button>
+    <form fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center" [formGroup]="loginForm">
 
+      <mat-form-field appearance="outline">
+        <mat-label>Username</mat-label>
+        <input type="text" matInput placeholder="Your username" formControlName="username">
+        <mat-hint>Please enter your username</mat-hint>
+        <mat-error>Missing username</mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Password</mat-label>
+        <input type="password" matInput placeholder="Your password" formControlName="password">
+        <mat-hint>Please enter your password</mat-hint>
+        <mat-error>Missing password</mat-error>
+      </mat-form-field>
+
+    </form>
+
+  </mat-card-content>
+  <mat-card-actions>
+    <button *ngIf="!isLoading" mat-raised-button color="primary" [disabled]="loginForm.invalid" (click)="OnSubmit()">Submit</button>
     <mat-spinner *ngIf="isLoading"></mat-spinner>
+  </mat-card-actions>
 
-  </form>
+  <a href="/resetPwd">Forgot your password?</a>
+
+</mat-card>
 </section>
