User Not allowed screen added and other backend changes

--- a/Frontend/my-photo-links/src/app/auth/forget-password/forget-password.component.html
+++ b/Frontend/my-photo-links/src/app/auth/forget-password/forget-password.component.html
@@ -30,7 +30,7 @@
           <mat-step [stepControl]="secQuesAnsFormGroup">
             <form [formGroup]="secQuesAnsFormGroup" fxLayout="column" fxLayoutAlign="center center">
               <ng-template matStepLabel>Answer security question</ng-template>
-              <div class="ques"><b>Ques : {{secQuesAnsFormGroup.value.secQues}}</b></div>
+              <div class="ques"><b>Ques : <i>{{secQuesAnsFormGroup.value.secQues}}</i></b></div>
               <mat-form-field appearance="outline">
                 <mat-label>Answer</mat-label>
                 <input type="text" matInput placeholder="Your answer" formControlName="answer" (keyup)="onKeyAnswer()">
@@ -59,9 +59,10 @@
                 <input type="password" matInput placeholder="Re-enter password" formControlName="confirmPassword" (keyup)="onKeyPassword()">
                 <mat-error *ngIf="passwordResetGroup.controls.confirmPassword.hasError('mismatch')">Passwords didn't match</mat-error>
               </mat-form-field>
-              <div>
+              <div *ngIf="!isLoading">
                 <button mat-button (click)="OnSubmit()" [disabled]="passwordResetGroup.invalid">Submit</button>
               </div>
+              <mat-spinner *ngIf="isLoading"></mat-spinner>
             </form>
           </mat-step>
     
