--- a/Frontend/my-photo-links/src/app/auth/login/login.component.html
+++ b/Frontend/my-photo-links/src/app/auth/login/login.component.html
@@ -13,14 +13,12 @@
       <mat-form-field appearance="outline">
         <mat-label>Username</mat-label>
         <input type="text" matInput placeholder="Your username" formControlName="username">
-        <mat-hint>Please enter your username</mat-hint>
         <mat-error>Missing username</mat-error>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
         <input type="password" matInput placeholder="Your password" formControlName="password">
-        <mat-hint>Please enter your password</mat-hint>
         <mat-error>Missing password</mat-error>
       </mat-form-field>
 
@@ -32,7 +30,8 @@
     <mat-spinner *ngIf="isLoading"></mat-spinner>
   </mat-card-actions>
 
-  <a href="/resetPwd">Forgot your password?</a>
+  <a routerLink="/resetPwd">Forgot your password?</a>
+  <a routerLink="/signup">Don't have an account? Create one</a>
 
 </mat-card>
 </section>
