--- a/Frontend/my-photo-links/src/app/photo-links/photo-links.component.html
+++ b/Frontend/my-photo-links/src/app/photo-links/photo-links.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="!userNotAllowedReason">
 <mat-tab-group *ngIf="!resultsMode">
   <mat-tab label="Search by Query">
       <app-search-by-query></app-search-by-query>
@@ -6,5 +7,8 @@
     <app-search-by-tag></app-search-by-tag>
   </mat-tab>
 </mat-tab-group>
-
 <app-results *ngIf="resultsMode"></app-results>
+</div>
+<div *ngIf="userNotAllowedReason">
+<app-user-not-allowed></app-user-not-allowed>
+</div>
