--- a/Frontend/my-photo-links/src/app/photo-links/search-by-query/search-by-query.component.html
+++ b/Frontend/my-photo-links/src/app/photo-links/search-by-query/search-by-query.component.html
@@ -32,13 +32,20 @@
             <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
             <mat-datepicker touchUi #picker2 disabled="false"></mat-datepicker>
           </mat-form-field>
+
+          <mat-form-field color="primary" appearance="outline">
+            <mat-label>Select Tag</mat-label>
+            <mat-select [(value)]="selected" formControlName="selectedTag">
+              <mat-option *ngFor="let tag of userTags" [value]="tag.tagId">{{tag.tagName}}</mat-option>
+            </mat-select>
+          </mat-form-field>
     
         </form>
     
       </mat-card-content>
 
       <mat-card-actions>
-        <button  mat-raised-button color="primary" (click)="OnSubmit()" [disabled]="searchForm.invalid">Submit</button>
+        <button  mat-raised-button color="primary" (click)="OnSubmit()" [disabled]="searchForm.invalid">Search</button>
       </mat-card-actions>
     
     </mat-card>
