--- a/Frontend/my-photo-links/src/app/photo-links/user-not-allowed/user-not-allowed.component.html
+++ b/Frontend/my-photo-links/src/app/photo-links/user-not-allowed/user-not-allowed.component.html
@@ -5,7 +5,7 @@
     <div *ngIf="userBlocked" fxLayout="column" fxLayoutAlign="center center">
 
 
-        <h2 style="color: red;"><b>USER BLOCKED</b></h2> <br><br>
+        <h2 style="color: red;" class="animate__animated animate__bounce"><b>USER BLOCKED</b></h2> <br><br>
 
         <div class="message" *ngIf="blockReason"><b>Reason : <i>{{blockReason}}</i></b></div>
         <br>
@@ -17,7 +17,7 @@
 
     <div *ngIf="userHasNoTags" fxLayout="column" fxLayoutAlign="center center">
 
-        <h2 style="color: darkorange"><b>USER HAS NO TAGS</b></h2> <br><br>
+        <h2 style="color: darkorange" class="animate__animated animate__bounce"><b>USER HAS NO TAGS</b></h2> <br><br>
 
         <div class="message"><b>Hi {{loggedInUser.firstName}} {{loggedInUser.lastName}}, currently you dont have any tags assigned. To get a tag assigned please contact admin from below link</b></div>
         <br>
