--- a/Frontend/my-photo-links/src/app/photo-links/photo-links.component.html
+++ b/Frontend/my-photo-links/src/app/photo-links/photo-links.component.html
@@ -3,7 +3,7 @@
   <mat-tab label="Search photo link">
     <app-search-by-query></app-search-by-query>
   </mat-tab>
-  <mat-tab label="Add photo link" *ngIf="isSuperAdmin||isAdmin">
+  <mat-tab label="Add photo link">
     <app-add-photo-link></app-add-photo-link>
   </mat-tab>
 </mat-tab-group>
