--- a/Frontend/my-photo-links/src/app/auth/login/login.component.html
+++ b/Frontend/my-photo-links/src/app/auth/login/login.component.html
@@ -30,8 +30,8 @@
     <mat-spinner *ngIf="isLoading"></mat-spinner>
   </mat-card-actions>
 
-  <a routerLink="/resetPwd">Forgot your password?</a>
-  <a routerLink="/signup">Don't have an account? Create one</a>
+  <a class="linkButton" mat-button color="primary" routerLink="/resetPwd">Forgot your password?</a>
+  <a class="linkButton" mat-button color="primary" routerLink="/signup">Don't have an account? Create one</a>
 
 </mat-card>
 </section>
