--- a/Frontend/my-photo-links/src/app/navigation/header/header.component.html
+++ b/Frontend/my-photo-links/src/app/navigation/header/header.component.html
@@ -4,12 +4,14 @@
     <mat-icon>menu</mat-icon>
     </button>
   </div>
-  <div><a routerLink="/">My Photo Links</a></div>
+  <div><a href="/">My Photo Links</a></div>
   <div fxFlex fxlayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="10px" class="navigation-items">
       <li *ngIf="!isAuthenticated"><a routerLink="/signup">Signup</a></li>
       <li *ngIf="!isAuthenticated"><a routerLink="/login">Login</a></li>
-      <li *ngIf="isAuthenticated"><a href="/photoLinks">Photo Links</a></li>
+      <li *ngIf="isAuthenticated"><a routerLink="/photoLinks">Photo Links</a></li>
+      <li *ngIf="isAuthenticated"><a routerLink="/myProfile">My Profile</a></li>
+      <li *ngIf="isAuthenticated"><a routerLink="/manageUsers">Manage Users</a></li>
       <li *ngIf="isAuthenticated"><a style="cursor: pointer;" (click)="OnLogout()">Logout</a></li>
     </ul>
   </div>
