--- a/Frontend/my-photo-links/src/app/photo-links/edit-photo-link/edit-photo-link.component.html
+++ b/Frontend/my-photo-links/src/app/photo-links/edit-photo-link/edit-photo-link.component.html
@@ -1,6 +1,10 @@
 <section>
     <br>
     <mat-card fxLayout="column" fxLayoutAlign="center center">
+
+      <mat-card-header>
+        <mat-card-title>Edit photo link</mat-card-title>
+      </mat-card-header>
     
       <mat-card-content>
     
@@ -63,6 +67,7 @@
 
       <mat-card-actions>
         <button  mat-raised-button color="primary" (click)="OnSubmit()" [disabled]="editForm.invalid">Save</button>
+        <button mat-raised-button color="primary" (click)="OnBackToResults()">Back</button>
       </mat-card-actions>
     
     </mat-card>
