--- a/Frontend/my-photo-links/src/app/photo-links/search-by-query/search-by-query.component.html
+++ b/Frontend/my-photo-links/src/app/photo-links/search-by-query/search-by-query.component.html
@@ -35,7 +35,7 @@
 
           <mat-form-field color="primary" appearance="outline">
             <mat-label>Select Tag</mat-label>
-            <mat-select [(value)]="selected" formControlName="selectedTag">
+            <mat-select formControlName="selectedTag">
               <mat-option *ngFor="let tag of userTags" [value]="tag.tagId">{{tag.tagName}}</mat-option>
             </mat-select>
           </mat-form-field>
