Manage Tags completed

--- a/Frontend/my-photo-links/src/app/navigation/header/header.component.html
+++ b/Frontend/my-photo-links/src/app/navigation/header/header.component.html
@@ -12,6 +12,7 @@
       <li *ngIf="isAuthenticated"><a routerLink="/photoLinks">Photo Links</a></li>
       <li *ngIf="isAuthenticated"><a routerLink="/myProfile">My Profile</a></li>
       <li *ngIf="isAuthenticated"><a routerLink="/manageUsers">Manage Users</a></li>
+      <li *ngIf="isAuthenticated"><a routerLink="/manageTags">Manage Tags</a></li>
       <li *ngIf="isAuthenticated"><a style="cursor: pointer;" (click)="OnLogout()">Logout</a></li>
     </ul>
   </div>
