--- a/Frontend/my-photo-links/src/app/my-profile/my-profile.component.html
+++ b/Frontend/my-photo-links/src/app/my-profile/my-profile.component.html
@@ -3,7 +3,8 @@
     <mat-card  fxLayout="column" fxLayoutAlign="center center">
 
       <mat-card-header>
-        <mat-card-title>My Profile</mat-card-title>
+        <mat-card-title *ngIf="!editProfile">My Profile</mat-card-title>
+        <mat-card-title *ngIf="editProfile">Edit Profile</mat-card-title>
       </mat-card-header>
     
       <mat-card-content>
@@ -42,6 +43,7 @@
                 <input type="text" matInput placeholder="Your answer" formControlName="answer">
                 <mat-error>Missing answer</mat-error>
             </mat-form-field>
+
             <mat-form-field appearance="standard" *ngIf="editProfile && editPassword">
                 <mat-label>Password</mat-label>
                 <input type="password" matInput placeholder="Enter password" formControlName="password">
