--- a/Frontend/my-photo-links/src/app/navigation/footer/footer.component.html
+++ b/Frontend/my-photo-links/src/app/navigation/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer color="primary">
-    <p>Made with <mat-icon class="animate__animated animate__heartBeat animate__infinite infinite">favorite</mat-icon> by <a routerLink="/manageUsers">@gunatejayadavalli</a></p>
+    <p>Made with <mat-icon class="animate__animated animate__heartBeat animate__infinite infinite">favorite</mat-icon> by <a routerLink="/aboutMe">@gunatejayadavalli</a></p>
 </footer>
