Sidenav Modifications and all subscriptions closed. Fetch tags for photolinks Java logic optimized

--- a/Frontend/my-photo-links/src/app/info/about-me/about-me.component.css
+++ b/Frontend/my-photo-links/src/app/info/about-me/about-me.component.css
@@ -24,7 +24,11 @@ mat-card{
 }
 
 .main{
+    max-width: 600px;
+}
+
+.contact{
     padding: 8px;
     max-width: 600px;
-    align-content: center;
+    font-size: medium;
 }
