--- a/Frontend/my-photo-links/src/app/navigation/side-nav/side-nav.component.html
+++ b/Frontend/my-photo-links/src/app/navigation/side-nav/side-nav.component.html
@@ -19,14 +19,32 @@
     <span class="nav-caption">My Profile</span>
   </a>
   <mat-divider *ngIf="isAuthenticated"></mat-divider>
-  <a mat-list-item routerLink="/manageUsers" (click)="OnClose()" *ngIf="isAuthenticated">
-    <mat-icon>admin_panel_settings</mat-icon>
-    <span class="nav-caption">Manage Users</span>
-  </a>
+
+  <mat-list-item (click)="showSuperAdminScreens = !showSuperAdminScreens" *ngIf="isAuthenticated">
+    <mat-icon>settings</mat-icon>
+    <span class="nav-caption">Superadmin</span>
+    <mat-icon class="menu-button" style="margin-left: 10px;" [ngClass]="{'rotated' : showSuperAdminScreens, 'expanded' : !showSuperAdminScreens}">expand_more</mat-icon>
+  </mat-list-item>
+  
+  <div class="submenu" [ngClass]="{'expanded' : showSuperAdminScreens}" *ngIf="showSuperAdminScreens">
+    <a mat-list-item routerLink="/manageUsers" (click)="OnClose()" *ngIf="isAuthenticated">
+      <mat-icon>admin_panel_settings</mat-icon>
+      <span class="nav-caption">Manage Users</span>
+    </a>
+    <a mat-list-item routerLink="/manageTags" (click)="OnClose()" *ngIf="isAuthenticated">
+      <mat-icon>games</mat-icon>
+      <span class="nav-caption">Manage Tags</span>
+    </a>
+    <a mat-list-item routerLink="/viewFeedbacks" (click)="OnClose()" *ngIf="isAuthenticated">
+      <mat-icon>article</mat-icon>
+      <span class="nav-caption">View Feedbacks</span>
+    </a>
+  </div>
+
   <mat-divider *ngIf="isAuthenticated"></mat-divider>
-  <a mat-list-item routerLink="/manageTags" (click)="OnClose()" *ngIf="isAuthenticated">
-    <mat-icon>games</mat-icon>
-    <span class="nav-caption">Manage Tags</span>
+  <a mat-list-item routerLink="/giveFeedback" (click)="OnClose()" *ngIf="isAuthenticated">
+    <mat-icon>feedback</mat-icon>
+    <span class="nav-caption">Give Feedback</span>
   </a>
   <mat-divider *ngIf="isAuthenticated"></mat-divider>
   <a mat-list-item routerLink="/aboutApp" (click)="OnClose()">
@@ -34,20 +52,8 @@
     <span class="nav-caption">About App</span>
   </a>
   <mat-divider *ngIf="isAuthenticated"></mat-divider>
-  <a mat-list-item routerLink="/giveFeedback" (click)="OnClose()" *ngIf="isAuthenticated">
-    <mat-icon>feedback</mat-icon>
-    <span class="nav-caption">Give Feedback</span>
+  <a mat-list-item (click)="OnLogout()" *ngIf="isAuthenticated">
+    <mat-icon>eject</mat-icon>
+    <span class="nav-caption">Logout</span>
   </a>
-  <mat-divider *ngIf="isAuthenticated"></mat-divider>
-  <a mat-list-item routerLink="/viewFeedbacks" (click)="OnClose()" *ngIf="isAuthenticated">
-    <mat-icon>article</mat-icon>
-    <span class="nav-caption">View Feedbacks</span>
-  </a>
-  <mat-divider *ngIf="isAuthenticated"></mat-divider>
-  <mat-list-item *ngIf="isAuthenticated">
-    <button mat-icon-button (click)="OnLogout()">
-      <mat-icon>eject</mat-icon>
-      <span class="nav-caption">Logout</span>
-    </button>
-  </mat-list-item>
 </mat-nav-list>
