--- a/Frontend/my-photo-links/src/app/photo-links/user-not-allowed/user-not-allowed.component.html
+++ b/Frontend/my-photo-links/src/app/photo-links/user-not-allowed/user-not-allowed.component.html
@@ -10,7 +10,7 @@
         <div class="message" *ngIf="blockReason"><b>Reason : <i>{{blockReason}}</i></b></div>
         <br>
         <div>
-            <a [href]="contactAdminUrl" target="_blank" mat-button>Contact Admin<mat-icon>chat</mat-icon></a>
+            <a class="animate__animatedanimate__tada animate__delay-3s" [href]="contactAdminUrl" target="_blank" mat-button>Contact Admin<mat-icon>chat</mat-icon></a>
         </div>
 
     </div>
@@ -22,7 +22,7 @@
         <div class="message"><b>Hi {{loggedInUser.firstName}} {{loggedInUser.lastName}}, currently you dont have any tags assigned. To get a tag assigned please contact admin from below link</b></div>
         <br>
         <div>
-            <a [href]="contactAdminUrl" target="_blank" mat-button>Contact Admin<mat-icon>chat</mat-icon></a>
+            <a class="animate__animated animate__tada animate__delay-3s" [href]="contactAdminUrl" target="_blank" mat-button>Contact Admin<mat-icon>chat</mat-icon></a>
         </div>
         
     </div>
