--- a/Frontend/my-photo-links/src/app/info/about-me/about-me.component.html
+++ b/Frontend/my-photo-links/src/app/info/about-me/about-me.component.html
@@ -1,39 +1,19 @@
-<!--<section fxFlex fxLayout="column" fxLayoutAlign="center center">
-<mat-card class="example-card" fxLayout="column" fxLayoutAlign="center center">
-    <img mat-card-image src="assets/images/My Pic.jpg" 
-    style="
-            object-fit: cover;
-            width: 70%;
-            height: 30%;
-        "
-    alt="Guna Teja Yadavalli">
-    <mat-card-content fxLayout="column" fxLayoutAlign="center center">
-    <div class="title"><b>Guna Teja Yadavalli</b></div>
-    <br>
-      <div class="info">
-        I am a full stack developer, working in Tata Consultancy Services with an experience of 3.8 years.
-      </div>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-</mat-card>
-</section>-->
-
-<section fxLayoutAlign="center center">
+<section fxLayout="row" fxLayoutAlign="center center">
   <div fxLayout="column" fxLayoutAlign="center center" class="main">
-    <h2 style="margin-top: 10px; margin-bottom: 15px;"><b>ABOUT ME</b></h2>
+    <h2 style="margin-top: 10px; margin-bottom: 10px;"><b>ABOUT ME</b></h2>
     <div>
       <div fxLayout="column" fxLayoutAlign="center center">
-        <img mat-card-image src="assets/images/My Pic.jpg" style="width: 250px;" alt="Guna Teja Yadavalli">
+        <img mat-card-image src="assets/images/My Pic.jpg" style="width: 60%;" alt="Guna Teja Yadavalli">
       </div>
     </div>
     <br>
     <div class="intro">
-      <p>
-        I am <b>Guna Teja Yadavalli</b> a full stack developer, working in Tata Consultancy Services with an work experience of 3.8 years
-      </p>
+        My name is <b>Guna Teja Yadavalli</b>. I am........
     </div>
+    <br>
+    <p class="animate__animated animate__flash animate__infinite infinite animate__slow"><i>Still thinking what to write here</i></p>  
+    <br>
+    <div class="contact">Hire me for your projects? Contact me here..</div>
+    <br>
   </div>
   </section>
