--- a/Frontend/my-photo-links/src/app/navigation/header/header.component.css
+++ b/Frontend/my-photo-links/src/app/navigation/header/header.component.css
@@ -17,3 +17,9 @@ a:hover,a:active {
   display: inline-block;
   padding-left: 6px;
 }
+
+mat-toolbar{
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
