Added Social icons in About Me page

--- a/Frontend/my-photo-links/src/app/info/about-app/about-app.component.html
+++ b/Frontend/my-photo-links/src/app/info/about-app/about-app.component.html
@@ -45,7 +45,8 @@
         </ul>
         </div>
     <br>
-    <div fxLayout="column" fxLayoutAlign="center center"><div>Feel free to fork the project on<a href="https://github.com/gunatejayadavalli/My-Photo-Links-Project" target="_blank"style="padding:0" mat-button color="primary">Github</a></div></div>
+    <!-- <div fxLayout="column" fxLayoutAlign="center center"><div>Feel free to fork the project on<a href="https://github.com/gunatejayadavalli/My-Photo-Links-Project" target="_blank"style="padding:0" mat-button color="primary">Github</a></div></div> -->
+    <div fxLayout="column" fxLayoutAlign="center center"><div>Feel free to fork the project on  <a  href="https://github.com/gunatejayadavalli/My-Photo-Links-Project" target="_blank"><i class="fab fa-github socialIcons animate__animated animate__heartBeat animate__infinite -infinite"></i></a></div></div>
     <a routerLink="/aboutMe" mat-button color="primary" fxLayout="column" fxLayoutAlign="center center">Meet the developer?</a>
     <br><br>
 </div>
