--- a/Frontend/my-photo-links/src/app/info/about-me/about-me.component.css
+++ b/Frontend/my-photo-links/src/app/info/about-me/about-me.component.css
@@ -32,3 +32,9 @@ mat-card{
     max-width: 600px;
     font-size: medium;
 }
+
+.socialIcons{
+    height:25px !important;
+    width:25px !important;
+    font-size:25px !important;
+}
