--- a/Frontend/my-photo-links/src/app/info/about-me/about-me.component.html
+++ b/Frontend/my-photo-links/src/app/info/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <section fxLayout="row" fxLayoutAlign="center center">
   <div fxLayout="column" fxLayoutAlign="center center" class="main">
-    <h2 style="margin-top: 10px; margin-bottom: 10px;"><b>ABOUT ME</b></h2>
+    <h2 style="margin-top: 10px;"><b>ABOUT ME</b></h2>
     <div>
       <div fxLayout="column" fxLayoutAlign="center center">
         <img mat-card-image src="assets/images/My Pic.jpg" style="width: 60%;" alt="Guna Teja Yadavalli">
@@ -12,8 +12,16 @@
     </div>
     <br>
     <p class="animate__animated animate__flash animate__infinite infinite animate__slow"><i>Still thinking what to write here</i></p>  
-    <br>
+    <br><br>
     <div class="contact">Hire me for your projects? Contact me here..</div>
     <br>
+    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+      <a  href="https://www.linkedin.com/in/guna-teja-yadavalli-535816190/" target="_blank"><i class="fab fa-linkedin-in socialIcons animate__animated animate__fast animate__heartBeat"></i></a>
+      <a  href="https://join.skype.com/invite/uCvHZoXUGbUH" target="_blank"><i class="fab fa-skype socialIcons animate__animated animate__heartBeat animate__fast animate__delay-1s"></i></a>
+      <a  href="https://api.whatsapp.com/send?phone=918500572622" target="_blank"><i class="fab fa-whatsapp socialIcons animate__animated animate__heartBeat animate__fast animate__delay-2s"></i></a>
+      <a  href="https://github.com/gunatejayadavalli" target="_blank"><i class="fab fa-github socialIcons animate__animated animate__heartBeat animate__fast animate__delay-2s"></i></a>
+      <a  href="https://twitter.com/gunateja100" target="_blank"><i class="fab fa-twitter socialIcons animate__animated animate__heartBeat animate__fast animate__delay-1s"></i></a>
+      <a  href="https://www.facebook.com/guna.teja.7" target="_blank"><i class="fab fa-facebook socialIcons animate__animated animate__heartBeat animate__fast"></i></a>
+    </div>
   </div>
   </section>
