--- a/Frontend/my-photo-links/src/app/info/about-app/about-app.component.css
+++ b/Frontend/my-photo-links/src/app/info/about-app/about-app.component.css
@@ -8,3 +8,10 @@
     max-width: 600px;
     align-content: center;
 }
+
+.socialIcons{
+    height:20px !important;
+    width:20px !important;
+    font-size:20px !important;
+    margin-left: 5px;
+}
