Modify Tags added, My Profile disable fixed, Loading spinners added, Database scripts added with actual data

--- a/Frontend/my-photo-links/src/app/photo-links/edit-photo-link/edit-photo-link.component.html
+++ b/Frontend/my-photo-links/src/app/photo-links/edit-photo-link/edit-photo-link.component.html
@@ -66,8 +66,9 @@
       </mat-card-content>
 
       <mat-card-actions>
-        <button  mat-raised-button color="primary" (click)="OnSubmit()" [disabled]="editForm.invalid">Save</button>
-        <button mat-raised-button color="primary" (click)="OnBackToResults()">Back</button>
+        <button *ngIf="!editing" mat-raised-button color="primary" (click)="OnSubmit()" [disabled]="editForm.invalid">Save</button>
+        <button *ngIf="!editing" mat-raised-button color="primary" (click)="OnBackToResults()">Back</button>
+        <mat-spinner *ngIf="editing"></mat-spinner>
       </mat-card-actions>
     
     </mat-card>
