--- a/Frontend/my-photo-links/src/app/photo-links/add-photo-link/add-photo-link.component.html
+++ b/Frontend/my-photo-links/src/app/photo-links/add-photo-link/add-photo-link.component.html
@@ -60,7 +60,8 @@
       </mat-card-content>
 
       <mat-card-actions>
-        <button  mat-raised-button color="primary" (click)="OnSubmit()" [disabled]="addForm.invalid">Add</button>
+        <button  *ngIf="!adding" mat-raised-button color="primary" (click)="OnSubmit()" [disabled]="addForm.invalid">Add</button>
+        <mat-spinner *ngIf="adding"></mat-spinner>
       </mat-card-actions>
     
     </mat-card>
